# diamondback-ruby

./: .gitignore  .merlin  .travis.yml  AUTHORS  ChangeLog  NEWS  OMakefile  OMakeroot  README.md  config.omake  druby.conf  druby.conf.in  druby.gemspec  gem.configure
doc/: manual.lyx
dypgen-20070627/: CHANGES  Makefile  OMakefile  credits  dyp2gram.pl  dypgen-doc.tex
dypgen-20070627/dyplib/: Makefile  OMakefile  automaton.ml  dyp.ml  dyp.mli  gs.ml  path_queue.ml  priority_by_relation.ml
dypgen-20070627/generators/: OMakefile
examples/: README.md  test4.rb  test5.rb  test6.rb  test7.rb
exmaples/: README.md  test1.rb  test2.rb  test3.rb
gem_bin/: druby  safe_eval
lib/: druby.rb
lib/druby/: safe_eval.rb  utils.rb
ocaml-syck-0.1.1/: COPYING  Makefile.in  OMakefile  TODO  config.mk.in  configure  configure.ac  rules.mk
ocaml-syck-0.1.1/t/: Makefile.in  OMakefile  yamlsh.ml
ocaml-syck-0.1.1/yaml/: META.in  Makefile.in  OMakefile  config.h.in  emitter.c  parser.c  yamlEmitter.ml  yamlEmitter.mli  yamlNode.ml  yamlNode.mli  yamlParser.ml  yamlParser.mli
resources/travis/: before_deploy.sh  before_install.sh  build.sh  install_deps.sh  setup_opam.sh
src/: OMakefile  config.ml  druby  druby.conf  main.ml  print_cfg  print_cfg.ml  safe_eval  safe_eval.ml  utils.ml
src/cfg/: OMakefile  cfg.ml  cfg.mli  cfg_refactor.ml  cfg_scope.ml  cfg_scope.mli  dataflow.ml  file_loader.ml  file_loader.mli  namespace.ml  namespace.mli
src/dyn/: OMakefile  dyn_builder.ml  dynamic.ml  dynamic.mli  evals.ml  find_evals.rb  method_missing.ml  mining.ml  reflection.ml  require.ml  send.ml  yaml.ml  yaml.mli
src/parser/: OMakefile  annotation.ml  annotation.mli  ast.ml  newLexer.ml  newLexer.mll  newParser.dyp  newParser.ml  newParser.mli  parse_helper.ml  parse_helper.mli  rat_test  typeAnnotLexer.ml  typeAnnotLexer.mll  typeAnnotParser.ml  typeAnnotParser.mli  typeAnnotParser.mly
src/rubycode/: OMakefile  build_interface_files_from_dir.rb  extract_types.rb  infer_required.rb  run_annotation_collector.rb  type_prof.rb
src/typing/: OMakefile  constraintGraph.ml  contracts.ml  contracts.mli  old_typing.ml  rType.ml  rType.mli  typing.ml  typing.mli  unify.ml  unify.mli  variable.ml  variable.mli
stubs/1.8/: base_types.rb  digest.so.rb  etc.so.rb  fcntl.so.rb  iconv.so.rb  rbconfig.rb  sha2.so.rb  socket.so.rb  syck.so.rb  thread.so.rb
stubs/2.3/: base_types.rb  nkf.so.rb  openssl.so.rb  rbconfig.rb  stringio.so.rb  syck.so.rb  zlib.so.rb
tests/: OMakefile  base_types.cfg  cache_base_cfg  cache_base_cfg.ml  casts.rb  oUnit_success.ml  oUnit_success.ml.custom  oUnit_success.ml.exist  run_tests  run_tests.ml  unit_tests.results
tests/cfg/: OMakefile  cfg_locals_test.ml  cfg_suite.ml  cfg_test_helper.ml  iface_progs.ml  iface_to_cfg_test.ml  printer_tests.ml  refactor_tests.ml  scope_cfg_tests.ml
tests/common/: OMakefile  prog_test.ml
tests/contracts/: OMakefile  contracts_suite.ml
tests/early/: OMakefile  early_suite.ml  ruby_runner.rb  test1.rb
tests/ruby/: OMakefile
(+428 files in other folders)
